--- a/CarTuteStudentCode/CarTuteStudentCode.vcxproj
+++ b/CarTuteStudentCode/CarTuteStudentCode.vcxproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <ClInclude Include="Car.h" />
     <ClInclude Include="glut.h" />
+    <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
